# freeCodeCampOS

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  .npmignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.migration  LICENSE  MIGRATION.md  MIGRATION_SUMMARY.md  README.md  README_MIGRATION.md  a.md  build.ts  freecodecamp.conf.json  index.html  package-lock.json  package.json  parser.js  release-please-config.json  t.js  techstack.md  techstack.yml  tsconfig.json  vite.config.ts
.devcontainer/: devcontainer.json  freecodecamp-courses-patch.vsix
.freeCodeCamp/: .babelrc  Dockerfile  freecodecamp.conf.json  package-lock.json  package.json  sample.env  webpack.config.cjs  webpack.config.js
.freeCodeCamp/client/: index.html  index.tsx  styles.css
.freeCodeCamp/client/components/: block.tsx  console.tsx  controls.tsx  description.tsx  error.tsx  header.tsx  heading.tsx  hints.tsx  integrated-project-heading.tsx  integrated-project-tests.tsx  loader.tsx  output.tsx  progress.tsx  project-heading.tsx  project-hints.tsx  project-tests.tsx  selection.tsx
.freeCodeCamp/client/templates/: integrated-project.css  integrated-project.tsx  landing.css  landing.tsx  project.css  project.tsx
.freeCodeCamp/client/types/: index.ts
.freeCodeCamp/client/utils/: index.ts
.freeCodeCamp/config/: projects.json
.freeCodeCamp/npm/: postinstall.js  preinstall.js
.freeCodeCamp/output/: index.html
.freeCodeCamp/plugin/: index.js
.freeCodeCamp/tests/: parser.test.js  watcher.test.js
.freeCodeCamp/tests/fixtures/: expected-format.md  valid-poor-format.md
.freeCodeCamp/tooling/: .bashrc  client-socks.js  env.js  hot-reload.js  lesson.js  parser.js  rename-project.js  reset.js  seed.js  server.js  t.js  test-utils.js  test.js  utils.js  validate.js
.freeCodeCamp/tooling/config/: index.js
.freeCodeCamp/tooling/git/: build.js  gitterizer.js
.freeCodeCamp/tooling/locales/english/: build-x-using-y.md  integrated.md  learn-x-by-building-y.md  project-1.md
.freeCodeCamp/tooling/tests/: Python.js  main.js  test-worker.js  utils.js
.freeCodeCamp/tooling/watcher/: watcher.js
.github/workflows/: cli-release.yml  link-check.yml  mdbook.yml  pr-title-lint.yml  release-please.yml  release.yml
agent/: plan.md
bash/: .bashrc
cli/: .vscode  Cargo.toml  bash
cli/src/: clapper.rs  conf.rs  environment.rs  features.rs  fixtures.rs  fs.rs  main.rs
client/: index.html  index.tsx  styles.css  tsconfig.app.json  vite.config.ts
client/assets/: fcc_primary_large.tsx
client/components/: block.tsx  console.tsx  controls.tsx  description.tsx  error.tsx  header.tsx  heading.tsx  hints.tsx  language-list.tsx  loader.tsx  output.tsx  selection.tsx  test.tsx  tests.tsx
client/src/: main.tsx
client/src/components/: block.tsx  console.tsx  controls.tsx  header.tsx  heading.tsx  hints.tsx  language-globe.tsx  language-list.tsx  output.tsx  selection.tsx  test.tsx  tests.tsx
client/src/context/: websocket.tsx
client/src/templates/: landing.tsx  project.tsx
client/src/types/: index.ts
client/src/utils/: fetch.ts  index.tsx
client/templates/: project.tsx
client/types/: index.ts
client/utils/: index.ts
code-server/: docker-compose.yaml
code-server/code-server/: config.yaml
code-server/images/: Dockerfile
config/: Cargo.toml  projects.json  state.json
config/src/: lib.rs
curriculum/locales/english/: build-x-using-y.md  learn-freecodecamp-os.md  learn-x-by-building-y.md
docs/: book.toml  mdbook-admonish.css
docs/src/: CHANGELOG.md  SUMMARY.md  cli.md  client-injection.md  configuration.md  contributing.md  examples.md  freecodecamp-courses.md  getting-started-v4.md  getting-started.md  introduction.md  plugin-system.md  project-syntax.md  roadmap.md  test-utilities.md
docs/src/lessoning/: lesson.md  lifecycle.md
docs/src/resetting/: lifecycle.md  reset.md
docs/src/testing/: globals.md  lifecycle.md  test-utilities.md  test.md
docs/theme/: book.js  index.hbs
docs/theme/css/: chrome.css  general.css  print.css  variables.css
docs/theme/fonts/: fonts.css
example/: .gitignore  freecodecamp.conf.json  package-lock.json  package.json
example/bash/: .bashrc
example/client/: injectable.js
example/config/: projects.json  state.json
example/curriculum/assertions/: afrikaans.json
example/curriculum/locales/afrikaans/: build-x-using-y.md  learn-freecodecamp-os.md
example/curriculum/locales/english/: build-x-using-y.md  external-seed-seed.md  external-seed.md  learn-freecodecamp-os.md  lesson-watch.md  project-reset.md
example/tooling/: adjust-url.js  camper-info.js  extract-seed.js  helpers.js  plugins.js  rejig.js
minimal-example/: freecodecamp.conf.example.json  package.json
minimal-example/config/: projects.json  state.json
minimal-example/curriculum/locales/english/: example.md
parser/: Cargo.toml
parser/src/: lib.rs
runner/: Cargo.toml  README.md  test.json
runner/scripts/: node.js  python.py
runner/scripts/node/: index.js  test-worker.js
runner/scripts/python/: index.py  test_worker.py
runner/src/: config.rs  lib.rs  main.rs  node.rs  python.rs  utils.rs
runner/src/runners/: bash.rs  mod.rs  node.rs  python.rs
scripts/: postinstall.js
self/: freecodecamp.conf.json  package-lock.json  package.json
self/bash/: .bashrc
self/client/: injectable.js
self/config/: projects.json  state.json
self/curriculum/locales/af/: build-x-using-y.md
self/curriculum/locales/en/: build-x-using-y.md  external-seed.md  (+4 more)
self/tooling/: camper-info.js  helpers.js  plugins.js  rejig.js
server/: Cargo.toml  index.ts
server/plugin/: index.js  index.ts
server/src/: handlers.rs  main.rs  projects.rs  state.rs  utils.rs  ws.rs
server/tests/: parser.test.js
server/tooling/: client-socks.ts  env.ts  hot-reload.ts  lesson.ts  logger.ts  parser.ts  reset.ts  seed.ts  t.ts  test-utils.ts  utils.ts  validate.ts
server/tooling/git/: build.ts  gitterizer.ts
server/tooling/tests/: main.ts  test-worker.ts
server/websocket/: index.ts
tooling/: camper-info.js  extract-seed.js  helpers.js  plugins.js
types/: index.ts
(+7 files in other folders)
