[workspace]
members = ["config", "parser", "runner", "server", "cli"]
resolver = "3"
edition = "2024"

[workspace.package]
version = "4.0.0"
edition = "2024"
license = "BSD-3-Clause"
repository = "https://github.com/freeCodeCamp/freeCodeCampOS"
homepage = "https://opensource.freecodecamp.org/freeCodeCampOS/"

[profile.release]
lto = true
codegen-units = 1
strip = true
