[package]
name = "create-freecodecamp-os-app"
version = "3.0.2"
edition = "2021"
description = "CLI to create the boilerplate for a new freeCodeCamp-OS app"
license = "BSD-3-Clause"
documentation = "https://opensource.freecodecamp.org/freeCodeCampOS/cli.html"
homepage = "https://opensource.freecodecamp.org/freeCodeCampOS/"
repository = "https://github.com/freeCodeCamp/freeCodeCampOS"

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
indicatif = "0.17.7"
inquire = "0.6.2"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
