[package]
name = "create-freecodecamp-os-app"
version.workspace = true
edition.workspace = true
description = "CLI to create the boilerplate for a new freeCodeCamp-OS app"
license.workspace = true
documentation = "https://opensource.freecodecamp.org/freeCodeCampOS/cli.html"
homepage.workspace = true
repository.workspace = true

[dependencies]
config = { path = "../config" }
parser = { path = "../parser" }
runner = { path = "../runner" }
clap = { version = "4.5.60", features = ["derive"] }
indicatif = "0.18.4"
inquire = "0.9.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1"
anyhow = "1.0"
uuid = { version = "1.12.1", features = ["v4", "serde"] }
