[package]
name = "config"
version.workspace = true
edition.workspace = true
description = "Shared configuration types for freeCodeCampOS"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.12.1", features = ["v4", "serde"] }
