[package]
name = "parser"
version.workspace = true
edition.workspace = true
description = "Markdown parser for freeCodeCampOS curriculum"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
config = { path = "../config" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
comrak = { version = "0.50.0", features = ["shortcodes"] }
regex = "1.12.3"
anyhow = "1.0"
thiserror = "2.0.18"
uuid = { version = "1.12.1", features = ["v4", "serde"] }
