[package]
name = "runner"
version.workspace = true
edition.workspace = true
description = "Test runner for freeCodeCampOS curriculum"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
config = { path = "../config" }
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.26.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "2.0.18"
